<resources>
    <string name="app_name">Airports</string>
    <string name="display_name">Airports</string>
    <string name="action_settings">Settings</string>
    <string name="SearchText">Enter airport search text</string>
    <string name="SearchButton">Clear</string>
    <string name="AirportsFilename">Airports.txt</string>

    <string name="AirportNameLabel">Name</string>
    <string name="AirportCityLabel">City</string>
    <string name="AirportStateLabel">State</string>
    <string name="AirportLatLonLabel">Lat/Lon</string>
    <string name="AirportElevLabel">Elevation</string>
    <string name="AirportRunwayLabel">Rwy Len</string>
    <string name="AirportMagVarLabel">Mag Var</string>
    <string name="AirportWMMDecLabel">WMM Dec</string>
    <string name="AirportDistLabel">Distance</string>
    <string name="AirportTrueBearingLabel">Bearing (T)</string>
    <string name="AirportMagBearingLabel">Bearing (M)</string>
    <string name="CurrentLocationLatLonLabel">Lat/Lon</string>
    <string name="CurrentLocationWMMDecLabel">WMM Dec</string>
    <string name="CurrentLocationAltitudeLabel">WMM Altitude</string>

    <string name="MapButton">Show Map</string>
    <string name="EarthButton">Show Earth</string>
    <string name="AirNavButton">Show AirNav</string>
</resources>
